--- a/Project-Code/backend-microservice/package.json
+++ b/Project-Code/backend-microservice/package.json
@@ -40,6 +40,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sqs-consumer": "^14.2.0",
     "stripe": "^20.1.0",
     "typeorm": "^0.3.28"
   },
