--- a/Project-Code/backend-microservice/package.json
+++ b/Project-Code/backend-microservice/package.json
@@ -25,22 +25,21 @@
     "start:all": "concurrently -n AUTH,ORDER,PAYMENT,PRODUCT -c blue,green,magenta \"pnpm run start:auth\" \"npm run start:order\" \"npm run start:payment\" \"npm run start:product\""
   },
   "dependencies": {
-    "@aws-sdk/client-sns": "^3.958.0",
-    "@aws-sdk/client-sqs": "^3.958.0",
     "@clerk/backend": "^2.29.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "body-parser": "^2.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "mongoose": "^9.1.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "sqs-consumer": "^14.2.0",
     "stripe": "^20.1.0",
     "typeorm": "^0.3.28"
   },
