--- a/Project-Code/backend-microservice/package.json
+++ b/Project-Code/backend-microservice/package.json
@@ -25,10 +25,12 @@
     "start:all": "concurrently -n AUTH,ORDER,PAYMENT,PRODUCT -c blue,green,magenta \"pnpm run start:auth\" \"npm run start:order\" \"npm run start:payment\" \"npm run start:product\""
   },
   "dependencies": {
-    "@clerk/backend": "^2.29.0",
+    "@keyv/redis": "^5.1.5",
+    "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/microservices": "^11.1.11",
     "@nestjs/mongoose": "^11.0.4",
@@ -36,11 +38,18 @@
     "@nestjs/typeorm": "^11.0.0",
     "amqp-connection-manager": "^5.0.0",
     "amqplib": "^0.10.9",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
+    "cache-manager": "^7.2.8",
+    "cache-manager-redis-store": "^3.0.1",
+    "cacheable": "^2.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "ioredis": "^5.9.2",
+    "keyv": "^5.5.5",
     "mongoose": "^9.1.0",
     "pg": "^8.16.3",
+    "redis": "^5.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "stripe": "^20.1.0",
@@ -53,6 +62,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/amqplib": "^0.10.8",
+    "@types/bcrypt": "^6.0.0",
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
